; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-request.c_set_header_value.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-request.c_set_header_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_value = type { i8*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lwan_value*, i8*, i8*, i64)* @set_header_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_header_value(%struct.lwan_value* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.lwan_value*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store %struct.lwan_value* %0, %struct.lwan_value** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 %10
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i64 @string_as_uint16(i8* %13)
  %15 = call i64 @STR2_INT(i8 signext 58, i8 signext 32)
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i64 @LIKELY(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %35

20:                                               ; preds = %4
  %21 = load i8*, i8** %6, align 8
  store i8 0, i8* %21, align 1
  %22 = load i8*, i8** %7, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 3
  %24 = getelementptr inbounds i8, i8* %23, i64 -1
  store i8* %24, i8** %9, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = load %struct.lwan_value*, %struct.lwan_value** %5, align 8
  %27 = getelementptr inbounds %struct.lwan_value, %struct.lwan_value* %26, i32 0, i32 0
  store i8* %25, i8** %27, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = load i8*, i8** %9, align 8
  %30 = ptrtoint i8* %28 to i64
  %31 = ptrtoint i8* %29 to i64
  %32 = sub i64 %30, %31
  %33 = load %struct.lwan_value*, %struct.lwan_value** %5, align 8
  %34 = getelementptr inbounds %struct.lwan_value, %struct.lwan_value* %33, i32 0, i32 1
  store i64 %32, i64* %34, align 8
  br label %35

35:                                               ; preds = %20, %4
  ret void
}

declare dso_local i64 @LIKELY(i32) #1

declare dso_local i64 @string_as_uint16(i8*) #1

declare dso_local i64 @STR2_INT(i8 signext, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
